--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <button id="resizeButton">Resize The Grid</button>
     <div id="container"></div>
     <script src="app.js"></script>
 </body>
